# hermes-relay

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_RELEASE_NOTES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEVLOG.md  GEMINI.md  LICENSE  PLUGIN_RELEASE_NOTES.md  README.md  README.zh-CN.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SPEC.md  TEMP-hermes-desktop-analysis.md  TODO.md  build.gradle.kts  design-qa.md  gradle.properties  hermes_relay_bootstrap.pth  install.sh  pnpm-lock.yaml  pyproject.toml  settings.gradle.kts  setup.py  uninstall.sh
.githooks/: pre-commit  pre-push  update-structure.js
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
app/: build.gradle.kts  proguard-rules.pro
companion_relay/: __init__.py  __main__.py  config.py  relay.py  requirements.txt
desktop/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
desktop/tray/: Cargo.toml  build.rs
desktop/tray/installer/: hermes-relay.nsi  path.ps1
desktop/tray/src/: lib.rs  main.rs
desktop/tray/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tray/src-tauri/capabilities/: default.json
desktop/tray/src-tauri/src/: main.rs
desktop/tray/tests/: menu_contract.rs
desktop/tray/ui/: app.js  index.html  overlay.html  overlay.js  styles.css
docs/: HERMES-WEBAPI-REFERENCE.md  STATUS.md  android-ui-design-reference.md  decisions.md  dev-loop.md  legacy-cleanup-agent-prompt.md  localization-status.json  localization.md  mcp-tooling.md  path-architecture.html  pet-spec.md  plan.md  play-store-listing.md  privacy.md  realtime-voice-lab-readme.html  realtime-voice-poc.md  relay-protocol.md  relay-server.md  remote-access.md  screenshot-automation.md  security.md  spec.md  sphere-spec.md  translation-playbook.md  upstream-compatibility-certification.md  upstream-contributions.md  upstream-integration-sync.md  upstream-surface-matrix.md  worktree-workflow.md
gradle/: libs.versions.toml
hermes_relay_bootstrap/: __init__.py  _command_middleware.py  _handlers.py  _patch.py
legacy-pages-redirect/: README.md  redirect.html
plugin/: __init__.py  after-install.md  android_tool.py  cli.py  compat.py  config.py  doctor.py  gateway_diagnostics.py  hooks.py  install.sh  pair.py  phone_platform.py  plugin.yaml  profiles.py  pyproject.toml  requirements.txt  setup.py  skill.md  slash.py  status.py  update_check.py
plugin/dashboard/: .gitignore  README.md  __init__.py  build.sh  manifest.json  package-lock.json  package.json  plugin_api.py  test_plugin_api.py
plugin/dashboard/src/: index.jsx  styles.css
plugin/dashboard/src/components/: PairDialog.jsx  RelayStatusSlot.jsx
plugin/dashboard/src/lib/: api.js  formatters.js  ui-shims.jsx
plugin/dashboard/src/tabs/: BridgeActivity.jsx  MediaInspector.jsx  PushConsole.jsx  RelayManagement.jsx  RemoteAccess.jsx
plugin/enhancements/: __init__.py  context_injection.py  registry.py
plugin/hermes_relay_bootstrap/: __init__.py  _command_middleware.py  _handlers.py  _patch.py
plugin/relay/: __init__.py  __main__.py  _env_bootstrap.py  auth.py  client.py  config.py  image_activity.py  media.py  profile_voice.py  provider_options.py  qr_sign.py  realtime_voice.py  server.py  session_store.py  tailscale.py  tailscale_cli.py  tts_sanitizer.py  upstream_voice.py  voice.py  voice_auth.py  voice_output.py
plugin/relay/channels/: __init__.py  bridge.py  chat.py  desktop.py  notifications.py  proactive.py  terminal.py  tui.py
plugin/relay/realtime_agent/: __init__.py  broker.py  floor.py  hermes_tool_broker.py  models.py  report.py
plugin/relay/realtime_agent/providers/: __init__.py  base.py  openai.py  xai.py
plugin/skills/android/: SKILL.md
plugin/tests/: test_android_call.py  test_android_clipboard.py  test_android_describe_node.py  test_android_drag.py  test_android_events.py  test_android_find_nodes.py  test_android_location.py  test_android_long_press.py  test_android_macro.py  test_android_media.py  test_android_navigate.py  test_android_phone_status.py  test_android_read_screen.py  test_android_screen_hash.py  test_android_search_contacts.py  test_android_send_intent.py  test_android_send_sms.py  test_android_share_media.py  test_android_tap_text_cascade.py  test_android_tool.py  test_android_tool_device_selector.py  test_auth_rate_limiter.py  test_bootstrap_async_compat.py  test_bootstrap_route_registration.py  test_bridge_activity.py  test_bridge_channel.py  test_bridge_http_auth.py  test_bridge_multidevice.py  test_bridge_status.py  test_chat_typed_stream.py  test_command_middleware.py  test_compat.py  test_desktop_computer_use.py  test_desktop_health.py  test_doctor.py  test_enhancements.py  test_gateway_diagnostics.py  test_hermes_tool_broker.py  test_image_activity.py  test_media_inspect.py  (+49 more)
plugin/tools/: android_navigate.py  android_navigate_prompt.py  android_notifications.py  android_phone_status.py  android_tool.py  desktop_tool.py  resolve_result.py
plugin/voice_lab/: __init__.py  __main__.py  auth.py  cli.py  eval_approach.py  expressions.py  metrics.py  playback.py  registry.py  terminal_ui.py  textual_tui.py  tui_session.py
plugin/voice_lab/providers/: __init__.py  base.py  elevenlabs_tts.py  openai_realtime.py  openai_tts.py  stub.py  xai_realtime.py  xai_tts.py
quest/: README.md  build.gradle.kts  proguard-rules.pro  settings.gradle.kts
relay-core/: build.gradle.kts  consumer-rules.pro
relay-ui/: build.gradle.kts  consumer-rules.pro
relay_server/: Dockerfile  SKILL.md  __init__.py  __main__.py  config.py  hermes-relay.service  relay.py  requirements.txt
scripts/: add_chinese_strings.py  add_strings_to_values.py  android-locale-harness.py  bridge-smoke.sh  bump-android-version.sh  bump-plugin-version.sh  bump-relay-version.sh  bump-server-version.sh  bump-version.sh  check-android-collection-apis.py  check-android-locales.py  check-desktop-upstream-baseline.py  check-plugin-version-sync.py  check-privacy-policy.py  check-relay-version-sync.py  check-server-version-sync.py  check-upstream-compatibility.py  dev.bat  (+22 more)
(+948 files in other folders)
