[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-relay"
version = "0.5.0"
description = "Hermes-Relay plugin — Android device control toolset, QR pairing CLI, and WSS relay server for hermes-agent"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
    "segno>=1.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses"]
tmux = ["libtmux>=0.37.0"]  # optional — enables persistent tmux sessions in the terminal channel

# ── Packaging layout ──────────────────────────────────────────────────────────
#
# The Python source for the plugin lives under `plugin/` at the repo root. A
# flat layout (pyproject.toml *inside* plugin/) can't expose `plugin` as a
# package — setuptools auto-discovery would walk `plugin/`'s children and
# promote `relay/`, `tests/`, `tools/` to top-level packages instead, which
# breaks imports like `from plugin.relay.server import main`.
#
# Putting pyproject.toml at the repo root and pointing `find` at `plugin*`
# gives us the canonical hierarchy: `plugin`, `plugin.relay`,
# `plugin.relay.channels`, `plugin.tools`. The `relay_server/` directory is a
# separate top-level shim and is also included so `python -m relay_server`
# keeps working via the compat layer.
[tool.setuptools.packages.find]
where = ["."]
include = ["plugin*", "relay_server*"]
exclude = ["plugin.tests*", "plugin.skills*", "app*", "docs*", "user-docs*", "scripts*"]

[tool.setuptools.package-data]
plugin = ["skill.md", "plugin.yaml"]
"plugin.skills" = ["android/*.md"]
