[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-android"
version = "0.4.0"
description = "Android device control toolset, QR pairing CLI, and Hermes-Relay WSS server for hermes-agent"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
    "segno>=1.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses"]
tmux = ["libtmux>=0.37.0"]  # optional — enables persistent tmux sessions in the terminal channel
