[package]
name = "hermes-relay-tray"
version = "0.4.0-alpha.2"
description = "Optional menu-only Windows systray for the Hermes Relay CLI"
authors = ["Axiom Labs"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[[bin]]
name = "hermes-relay-tray"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = { version = "0.24.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
winres = "0.1.12"
