[package]
name = "hermes-relay-desktop"
version = "0.3.0-alpha.18"
description = "Hermes Relay desktop tray and control surface"
authors = ["Axiom Labs"]
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "hermes-relay-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
